SE AGREGAN MÁS entidades CON SUS frm PARA LAS NECESARIAS

--- a/distribuidora/Distribuidora.BL/Distribuidora.BL.csproj
+++ b/distribuidora/Distribuidora.BL/Distribuidora.BL.csproj
@@ -45,10 +45,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLDistribuidora.cs" />
+    <Compile Include="BL\cajerosBL.cs" />
+    <Compile Include="BL\clientesBL.cs" />
     <Compile Include="BL\departamentosBL.cs" />
     <Compile Include="BL\empleadosBL.cs" />
+    <Compile Include="Entidades\cajero.cs" />
+    <Compile Include="Entidades\cliente.cs" />
     <Compile Include="Entidades\departamento.cs" />
     <Compile Include="Entidades\empleado.cs" />
+    <Compile Include="MySQL\cajeroSQL.cs" />
+    <Compile Include="MySQL\clienteSQL.cs" />
     <Compile Include="MySQL\contexto.cs" />
     <Compile Include="MySQL\departamentoSQL.cs" />
     <Compile Include="MySQL\empleadoSQL.cs" />
