--- a/distribuidora/Distribuidora.Win/Distribuidora.Win.csproj
+++ b/distribuidora/Distribuidora.Win/Distribuidora.Win.csproj
@@ -87,6 +87,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frm_cajeros.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_cajeros.Designer.cs">
+      <DependentUpon>frm_cajeros.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frm_clientes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_clientes.Designer.cs">
+      <DependentUpon>frm_clientes.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm_login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -107,6 +119,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frm_cajeros.resx">
+      <DependentUpon>frm_cajeros.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_clientes.resx">
+      <DependentUpon>frm_clientes.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frm_login.resx">
       <DependentUpon>frm_login.cs</DependentUpon>
     </EmbeddedResource>
@@ -127,7 +145,9 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
-    <None Include="Properties\DataSources\Distribuidora.BL.BL.departamentoBL.datasource" />
+    <None Include="Properties\DataSources\Distribuidora.BL.BL.cajerosBL.datasource" />
+    <None Include="Properties\DataSources\Distribuidora.BL.BL.clientesBL.datasource" />
+    <None Include="Properties\DataSources\Distribuidora.BL.BL.departamentosBL.datasource" />
     <None Include="Properties\DataSources\Distribuidora.BL.BL.empleadosBL.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
